<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.androidcafe.uselectioninfo.viewmodel.RepresentativesViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/representatives_fragment_scene">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:text="@string/representative_search_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1_text"
            android:autofillHints="@string/address_line_1_text"
            android:text="@={viewModel.address.line1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_2_text"
            android:autofillHints="@string/address_line_2_text"
            android:text="@={viewModel.address.line2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city_text"
            android:ems="10"
            android:hint="@string/city_text"
            android:inputType="textPostalAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@={viewModel.address.city}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            android:entries="@{viewModel.states}"
            android:selectedItemPosition="@={viewModel.selectedStateIndex}"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city" />

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/zip_text"
            android:ems="10"
            android:hint="@string/zip_text"
            android:inputType="textPostalAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@={viewModel.address.zip}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/find_my_representatives_text"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/use_my_location_text"
            app:layout_constraintTop_toBottomOf="@id/search_button" />

        <TextView
            android:id="@+id/representatives_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:text="@string/my_representatives_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/small_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representatives_title"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="4"
            tools:listitem="@layout/representative_list_item">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>