<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.androidcafe.uselectioninfo.viewmodel.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}"
            tools:title="App Bar Title" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@{viewModel.selectedElection.electionDay.toString()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:electionInfoTitle="@{viewModel.voterInfo}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="@string/election_info_text" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/voting_location_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ballot_information_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <!--  future implementation -->
<!--        <androidx.constraintlayout.widget.Group-->
<!--            android:id="@+id/address_group"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:constraint_referenced_ids="state_correspondence_header,address" />-->

<!--        &lt;!&ndash; TODO: Add visual styling and content &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/state_correspondence_header"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_ballot"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

<!--        &lt;!&ndash; TODO: Add data binding &ndash;&gt;-->
<!--        <TextView-->
<!--            android:id="@+id/address"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

        <Button
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:onClick="@{() -> viewModel.onFollowButtonClick()}"
            app:followButtonText="@{viewModel.isElectionSaved}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>